tests/ui/const-generics/mgca/late-bound-param-lt-bad.stderr
error: cannot capture late-bound lifetime in constant
  --> $DIR/late-bound-param-lt-bad.rs:8:30
   |
LL | fn foo<'a, T>()
   |        -- lifetime defined here
LL | where
LL |     T: Trait<const { let a: &'a (); 1 }>
   |                              ^^

error: aborting due to 1 previous error

